--- a/ifac_si_app/src/app/component/login/login.component.html
+++ b/ifac_si_app/src/app/component/login/login.component.html
@@ -1,18 +1,23 @@
-<form (submit)="save()" #form="ngForm">
+<div #formDiv>
+    <form (submit)="save()" #form="ngForm">
+        <img src="../../../assets/images/logo-login.svg" alt="ifac.si logo">
+        <h4>ADMINISTRATIVO</h4>
 
-    <div class="grid">
+        <div class="flexContainer">
+            <div class="grid">
+                <input type="text" name="nomeUsuario" id="nomeUsuario" required
+                        [(ngModel)]="registro.nomeUsuario"
+                        placeholder="Usuário">
 
-        <label for="nomeUsuario">Usuário</label>
-        <input type="text" name="nomeUsuario" id="nomeUsuario" required
-                [(ngModel)]="registro.nomeUsuario">
-
-        <label for="senha">Senha</label>
-        <input type="text" name="senha" id="senha" required
-               [(ngModel)]="registro.senha">
-    </div>
-
-    <div id="formButton">
-        <input type="button" value="Esqueceu sua senha?" routerLink="../" id="esqueceSenha">
-        <input type="submit" value="ENTRAR" [disabled]="form.invalid">
-    </div>
-</form>
+                <input type="text" name="senha" id="senha" required
+                    [(ngModel)]="registro.senha"
+                    placeholder="Senha">
+            </div>
+        </div>
+        <div id="formButton">
+            <!-- <a type="button" value="Esqueceu sua senha?" routerLink="../" id="forgottenPassword"> -->
+            <a routerLink="../" id="forgottenPassword">Esqueceu sua senha?</a>
+            <input type="submit" value="ENTRAR" [disabled]="form.invalid" id="enterButton">
+        </div>
+    </form>
+</div>
