--- a/ifac_si_app/src/app/component/login/login.component.html
+++ b/ifac_si_app/src/app/component/login/login.component.html
@@ -8,10 +8,12 @@
                 <input type="text" name="nomeUsuario" id="nomeUsuario" required
                         [(ngModel)]="registro.nomeUsuario"
                         placeholder="Usuário">
-
+        
                 <div style="position: relative; display: flex; align-items: center;">
-                    <input type="password" name="senha" id="senha" required [(ngModel)]="registro.senha" placeholder="Senha" style="padding-right: 2.5em;">
-                    <span toggle="#senha" class="fa fa-fw fa-eye toggle-password" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;"></span>
+                    <input [type]="showPassword ? 'text' : 'password'" name="senha" id="senha" required [(ngModel)]="registro.senha" placeholder="Senha" style="padding-right: 2.5em;">
+                    <span (click)="togglePasswordVisibility()" class="password-toggle" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                        <i [class]="showPassword ? 'bi bi-eye-slash' : 'bi bi-eye'"></i>
+                    </span>
                 </div>            
             </div>
         </div>
