--- a/ifac_si_app/src/styles.css
+++ b/ifac_si_app/src/styles.css
@@ -2,3 +2,4 @@
 /* @import 'quill/dist/quill.bubble.css';
 @import 'quill/dist/quill.snow.css'; */
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
