Adicionando icons de busca e logout

--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.html
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.html
@@ -13,8 +13,10 @@
     </ul>
     <div id="subMenu" class="flex">
         <ul>
+            <i class="bi bi-search"></i>
             <li>Busca</li>
-            <li>Logout</li>
+            <li>Sair</li>
+            <i class="bi bi-box-arrow-right"></i>
         </ul>
     </div>
 </nav>
