--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.html
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.html
@@ -1,22 +1,22 @@
 <nav>
     <img src="../../../assets/images/logo-login.svg" alt="ifac.si logo" width="50" height="50">
-    <ul #principalMenu>
-        <li>
-            <a routerLink="../">Todas as publicações</a>
-        </li>
-        <li>
-            <a routerLink="../">Criar nova publicação</a>
-        </li>
-        <li>
-            <a routerLink="../">Meus dados</a>
-        </li>
-    </ul>
-    <div id="subMenu" class="flex">
-        <ul>
-            <i class="bi bi-search"></i>
-            <li>Busca</li>
-            <li>Sair</li>
-            <i class="bi bi-box-arrow-right"></i>
+    <div class="nav-content">
+        <ul id="menuPrincipal">
+            <li>
+                <a routerLink="../">Todas as publicações</a>
+            </li>
+            <li>
+                <a routerLink="../">Criar nova publicação</a>
+            </li>
+            <li>
+                <a routerLink="../">Meus dados</a>
+            </li>
         </ul>
+        <div id="subMenu" class="flex">
+            <ul>
+                <li><i class="bi bi-search"></i>Busca</li>
+                <li><i class="bi bi-box-arrow-right"></i>Sair</li>
+            </ul>
+        </div>
     </div>
 </nav>
