--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.css
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.css
@@ -32,14 +32,18 @@ nav ul li a{
     color: black;
 }
 
+nav ul li a:hover,
+nav ul li a:active {
+    font-weight: bold;
+    letter-spacing: -0.5px; 
+}
+
 nav ul li a:hover {
     color: #3FA14C;
-    font-weight: bold;
 }
 
 nav ul li a:active {
     color: #623CEA;
-    font-weight: bold;  
 }
 
 nav ul div#subMenu {
