--- a/ifac_si_app/src/app/app.component.html
+++ b/ifac_si_app/src/app/app.component.html
@@ -176,7 +176,7 @@
     }
   }
 </style> -->
-<app-menu-app></app-menu-app>
+<app-menu-app *ngIf="!isMenuPage"></app-menu-app>
 <!-- <main class="main">
   <div class="content">
     <div class="left-side">
