Adicionando css filters parcial

--- a/ifac_si_app/src/app/component/filters/filters.component.html
+++ b/ifac_si_app/src/app/component/filters/filters.component.html
@@ -1,4 +1,6 @@
-<p>Filtrar por: </p>
-<button>Categoria</button>
-<button>Tags</button>
-<button>Outros</button>
+<!-- <p>Filtrar por: </p> -->
+<div id="flex-container-filter">
+    <button><i class="bi bi-sliders2"></i>Todos os filtros</button>
+    <button>Categoria<i class="bi bi-chevron-down"></i></button>
+    <button>Tags<i class="bi bi-chevron-down"></i></button>
+</div>
