--- a/ifac_si_app/src/app/component/filters/filters.component.html
+++ b/ifac_si_app/src/app/component/filters/filters.component.html
@@ -1,6 +1,21 @@
 <!-- <p>Filtrar por: </p> -->
 <div id="flex-container-filter">
     <button><i class="bi bi-sliders2"></i>Todos os filtros</button>
-    <button>Categoria<i class="bi bi-chevron-down"></i></button>
-    <button>Tags<i class="bi bi-chevron-down"></i></button>
+    <div class="select-wrapper">
+        <select [(ngModel)]="categorias"> 
+          <option value="" disabled selected>Categoria</option>
+          <option *ngFor="let categoria of categorias" [value]="categoria.id">
+            {{categoria.nome}}
+          </option>
+        </select>
+    </div>
+    
+    <div class="select-wrapper">
+        <select [(ngModel)]="tags" multiple>
+            <option value="" disabled>Tags</option>
+            <option *ngFor="let tag of tags" [value]="tag.id">
+            {{tag.nome}}
+            </option>
+        </select>
+    </div>
 </div>
