--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -26,30 +26,27 @@ div#flex-container-filter button:last-child {
 .dropdown {
     position: relative;
     display: inline-block;
+    margin: 0 10px;
 }
 
 .dropdown-content {
-    display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    top: 100%; /* Coloca o conteúdo logo abaixo do botão */
+    left: 0;
 }
 
 .dropdown-content p {
     color: black;
     padding: 12px 16px;
-    text-decoration: none;
     display: block;
 }
 
 .dropdown-content p:hover {
     background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
 }
 
 .tags-scroll {
