--- a/ifac_si_app/src/app/component/filters/filters.component.html
+++ b/ifac_si_app/src/app/component/filters/filters.component.html
@@ -2,16 +2,16 @@
 <div id="flex-container-filter">
     <button><i class="bi bi-sliders2"></i>Todos os filtros</button>
     <div class="dropdown">
-        <button>Categoria <i class="bi bi-chevron-down"></i></button>
-        <div class="dropdown-content tags-scroll">
+        <button #category>Categoria <i class="bi bi-chevron-down"></i></button>
+        <div class="dropdown-content tags-scroll" *ngIf="filtersC">
             <p *ngFor="let categoria of categorias" (click)="handleFilterClick(categoria.id)">
                 {{ categoria.nome }}
             </p>
         </div>
     </div>
     <div class="dropdown">
-        <button>Tags <i class="bi bi-chevron-down"></i></button>
-        <div class="dropdown-content tags-scroll">
+        <button #tag>Tags <i class="bi bi-chevron-down"></i></button>
+        <div class="dropdown-content tags-scroll" *ngIf="filtersT">
             <p *ngFor="let tag of tags" (click)="handleFilterClick(tag.id)">
                 {{ tag.nome }}
             </p>
