--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -1,3 +1,11 @@
+button {
+    padding: 5px;
+    border-radius: 20px;
+    border-color: #623CEA;
+    color: #623CEA;
+    background-color: transparent;
+}
+
 button:first-child i:first-child {
     margin-right: 10px;
     margin-left: 0;
@@ -16,17 +24,17 @@ div#flex-container-filter {
 }
 
 div#flex-container-filter button:first-child {
-    margin-right: 40px;
+    margin-right: 30px;
 }
 
 div#flex-container-filter button:last-child {
-    margin-left: 40px;
+    margin-left: 30px;
 }
 
 .dropdown {
     position: relative;
     display: inline-block;
-    margin: 0 10px;
+    /* margin: 0 10px; */
 }
 
 .dropdown-content {
