Mds como pode ser tão difiícil centralizar um button com submenu

--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -1,5 +1,5 @@
 button {
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 20px;
     border-color: #623CEA;
     color: #623CEA;
@@ -18,9 +18,9 @@ button i:last-child {
 
 div#flex-container-filter {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: start;
-    margin: 10px auto 10px 70px;
+    margin: 10px 2px 10px 70px;
 }
 
 div#flex-container-filter button:first-child {
@@ -34,6 +34,7 @@ div#flex-container-filter button:last-child {
 .dropdown {
     position: relative;
     display: inline-block;
+    width: 190px;
     /* margin: 0 10px; */
 }
 
