--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -19,22 +19,24 @@ button i:last-child {
 div#flex-container-filter {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: start;
+    justify-content: flex-start;
     margin: 10px 2px 10px 70px;
+    width: 100%;
 }
 
-div#flex-container-filter button:first-child {
+/* div#flex-container-filter button:first-child {
     margin-right: 30px;
 }
 
 div#flex-container-filter button:last-child {
     margin-left: 30px;
-}
+} */
 
 .dropdown {
     position: relative;
     display: inline-block;
     width: 190px;
+    flex-shrink: 0;
     /* margin: 0 10px; */
 }
 
