--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -4,6 +4,7 @@ button {
     border-color: #623CEA;
     color: #623CEA;
     background-color: transparent;
+    margin: 0 20px;
 }
 
 button:first-child i:first-child {
@@ -20,22 +21,14 @@ div#flex-container-filter {
     display: flex;
     flex-wrap: nowrap;
     justify-content: flex-start;
-    margin: 10px 2px 10px 70px;
+    margin: 10px 2px 10px 60px;
     width: 100%;
 }
-
-/* div#flex-container-filter button:first-child {
-    margin-right: 30px;
-}
-
-div#flex-container-filter button:last-child {
-    margin-left: 30px;
-} */
 
 .dropdown {
     position: relative;
     display: inline-block;
-    width: 190px;
+    /* width: 190px; */
     flex-shrink: 0;
     /* margin: 0 10px; */
 }
