Construindo estrutura de view para posts

--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -1,1 +1,12 @@
 <app-filters></app-filters>
+
+<div .postView>
+    <div #postComposition>
+        <div #postImage>
+            
+        </div>
+    </div>
+    <div #postAction>
+
+    </div>
+</div>
