--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -1,14 +1,14 @@
 <app-filters></app-filters>
 
-<div class="post">
+<div class="postList">
     <div class="postView">
         <div id="postComposition" #postComposition>
-            <div #postImage>
-                <button><i class="bi bi-eye" style="font-weight: bold;"></i></button>
+            <div id="postImage" #postImage>
+                <button class="eyeButton"><i class="bi bi-eye" style="font-weight: bold;"></i></button>
                 <img src="../../../assets/images/no-photo.png" alt="Imagem indisponível">
             </div>
         </div>
-        <div #postAction>
+        <div id="postAction" #postAction>
             <button><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
             <button><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
         </div>
