Adicionando quill, css do mesmo e jquery relacionado ao mesmo

--- a/ifac_si_app/src/app/app.component.html
+++ b/ifac_si_app/src/app/app.component.html
@@ -177,6 +177,7 @@
   }
 </style> -->
 <app-menu-app *ngIf="!isMenuPage"></app-menu-app>
+<!-- <app-add-new-post></app-add-new-post> -->
 <!-- <main class="main">
   <div class="content">
     <div class="left-side">
