--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -1,4 +1,9 @@
+div#postInfo {
+    background-color: aliceblue;
+    /* margin-left: 10px; */
+}
+
 .container {
-    display: flex;
-    justify-content: space-between;
+    width: max-content;
+    
 }
