--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -10,8 +10,8 @@
                 </div>
             </div>
             <div id="postAction" #postAction>
-                <button><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
-                <button><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
+                <button #deleteButton><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
+                <button #editButton><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
             </div>
         </div>
         <p> {{post.titulo}} </p>
