--- a/ifac_si_app/src/app/component/loader/loader.component.html
+++ b/ifac_si_app/src/app/component/loader/loader.component.html
@@ -1,3 +1,6 @@
 <div *ngIf="loading" class="overlay">
-    <div class="loader"></div>
+    <div class="loader-container">
+        <div class="loader"></div>
+        <img src="../../../assets/images/logo-login.svg" alt="Logo" class="loader-image">
+    </div>
 </div>
