Adicionando pop up delete

--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.html
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.html
@@ -1,1 +1,8 @@
-<p>delete-form works!</p>
+<div class="overlay">
+    <div class="popUp">
+        <p>Você tem certeza que deseja deletar este item?</p>
+        <p>Essa ação será enviada para aprovação de deleção, uma vez que aceita, não pode ser desfeita</p>
+        <div><button></button></div>
+        <div><button></button></div>
+    </div>
+</div>
