Arrumando layout, terminar de definir

--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.css
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.css
@@ -12,5 +12,12 @@
 }
 
 .popUp {
+    padding: 10px;
     background-color: white;
+    border-radius: 5px;
+}
+
+.buttonActions{
+    display: flex;
+    justify-content: space-between;
 }
