--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.html
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.html
@@ -2,7 +2,9 @@
     <div class="popUp">
         <p>Você tem certeza que deseja deletar este item?</p>
         <p>Essa ação será enviada para aprovação de deleção, uma vez que aceita, não pode ser desfeita</p>
-        <div><button>Aceitar</button></div>
-        <div><button>Cancelar</button></div>
+        <div class="buttonActions">
+            <div><button>Cancelar</button></div>
+            <div><button>Confirmar</button></div>
+        </div>
     </div>
 </div>
