--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -1,4 +1,5 @@
 <app-filters></app-filters>
+<app-delete-form *ngIf="show"></app-delete-form>
 <div class="postList">
     <div *ngFor="let post of posts">
         <div class="postView">
