--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -13,7 +13,7 @@
             </div>
             <div id="postAction" #postAction>
                 <button #deleteButton><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
-                <button #editButton><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
+                <button #editButton [attr.data-post-id]="post.id"><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
             </div>
         </div>
         <p> {{post.titulo}} </p>
