Arrumando layout de view-posts

--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -22,7 +22,7 @@ div#flex-container-filter {
     flex-wrap: nowrap;
     justify-content: flex-start;
     margin: 10px 2px 10px 60px;
-    width: 100%;
+    width: fit-content;
 }
 
 .dropdown {
