Começando a arrumar layout de add new post

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -21,3 +21,16 @@ div#postInfo {
 #editorElement {
     margin-right: 10px;
 }
+
+label::after {
+    content: ":";
+}
+
+input {
+    /* margin-left: 10px; */
+    width: 100%;
+}
+
+#topEditor {
+    margin: 10px auto;
+}
