--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -12,12 +12,12 @@
         </ul>
       </div> -->
       <div class="col-md-9" id="editorElement">
-        <div class="row">
-          <div class="col-nd-12">
+        <div class="col-nd-12" id="topEditor">
+          <div class="col-nd-6">
             <label for="tituloPost">Título</label>
             <input type="text" name="tituloPost" id="tituloPost" [(ngModel)]="post.titulo">
           </div>
-          <div class="col-nd-12">
+          <div class="col-nd-6">
             <label for="LegendaPost">Legenda</label>
             <input type="text" name="LegendaPost" id="LegendaPost" [(ngModel)]="post.legenda">
           </div>
