--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.css
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.css
@@ -8,7 +8,7 @@ body {
 .container {
     width: 100%;
     max-width: 1200px; /* Ou o valor que você preferir */
-    margin: 0 auto;
+    margin: 0 100px;
     padding: 0 20px;
     box-sizing: border-box;
     overflow-x: hidden;
