Arrumando local botão

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -37,7 +37,7 @@
           </div>
         </div> -->
         <div class="row">
-          <div class="col-md-12">
+          <div class="col">
             <button class="btn btn-primary" (click)="saveContent()">Salvar</button>
           </div>
         </div>
