--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.html
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.html
@@ -4,7 +4,7 @@
         <p>Essa ação será enviada para aprovação de deleção, uma vez que aceita, não pode ser desfeita</p>
         <div class="buttonActions">
             <div><button #cancelButton>Cancelar</button></div>
-            <div><button>Confirmar</button></div>
+            <div><button #confirmButton>Confirmar</button></div>
         </div>
     </div>
 </div>
