--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -1,6 +1,6 @@
 <app-filters></app-filters>
 <div *ngIf="show">
-    <app-delete-form (cancelForm)="showDelete()"></app-delete-form>
+    <app-delete-form (cancelForm)="showDelete()" (confirmForm)="deletePost()"></app-delete-form>
 </div>
 <div class="container">
     <div class="postList">
@@ -13,7 +13,7 @@
                     </div>
                 </div>
                 <div id="postAction" #postAction>
-                    <button #deleteButton><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
+                    <button #deleteButton [attr.data-post-id]="post.id"><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
                     <button #editButton [attr.data-post-id]="post.id"><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
                 </div>
             </div>
