--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -1,93 +1,77 @@
-  <nav class="navbar">
-    <h3 style="text-align: center;">Quill Js Editor</h3>
-  </nav>
-  
-  <div class="container">
-    <div class="row">
-      <!-- <div class="row">
-        <ul>
-          <li *ngFor="let item of lista">
-            <a href="#" (click)="getById(item.id)">{{item.id}}</a>
-          </li>
-        </ul>
-      </div> -->
+
+<nav class="navbar">
+  <h3 style="text-align: center;">Quill Js Editor</h3>
+</nav>
+<div class="container">
+  <div class="row">
       <div class="col-md-9" id="editorElement">
-        <div class="col-nd-auto" id="topEditor">
-          <div class="row">
-            <label for="tituloPost">Título</label>
-            <input type="text" name="tituloPost" id="tituloPost" [(ngModel)]="post.titulo">
+          <div class="col-nd-auto" id="topEditor">
+              <div class="row">
+                  <label for="tituloPost">Título</label>
+                  <input type="text" name="tituloPost" id="tituloPost" [(ngModel)]="post.titulo">
+              </div>
+              <div class="row">
+                  <label for="LegendaPost">Legenda</label>
+                  <input type="text" name="LegendaPost" id="LegendaPost" [(ngModel)]="post.legenda">
+              </div>
           </div>
           <div class="row">
-            <label for="LegendaPost">Legenda</label>
-            <input type="text" name="LegendaPost" id="LegendaPost" [(ngModel)]="post.legenda">
+              <div class="col-nd-12">
+                  <quill-editor [styles]="{height: '200px'}" [modules]="modules" (onEditorChanged)="changedEditor($event)" #content="ngModel" [(ngModel)]="post.texto" placeholder="Por favor insira seu post aqui">
+                  </quill-editor>
+              </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-nd-12">
-            <quill-editor [styles]="{height: '200px'}" [modules]="modules" 
-            (onEditorChanged)="changedEditor($event)" #content="ngModel" 
-            [(ngModel)]="post.texto" placeholder="Por favor insira seu post aqui">
-            </quill-editor>
+          <div class="row">
+              <div class="col">
+                  <button class="btn btn-primary" (click)="saveContent()">Salvar</button>
+              </div>
           </div>
-        </div>
-        <!-- <div class="row">
-          <h3 style="text-align: left;">Output</h3>
-          <div class="col-md-8 bg-light">
-            <p [innerHTML]="post.texto"></p>
-          </div>
-        </div> -->
-        <div class="row">
-          <div class="col">
-            <button class="btn btn-primary" (click)="saveContent()">Salvar</button>
-          </div>
-        </div>
       </div>
       <div class="col" id="postInfo">
-        <div id="accordion">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Status e Visibilidade
-                        </button>
-                    </h5>
-                </div>
-    
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">
-                        Conteúdo do Status e Visibilidade.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Categorias
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
-                        Conteúdo das Categorias.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Tags
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        Conteúdo das Tags.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+          <div id="accordion">
+              <div class="card">
+                  <div class="card-header" id="headingOne">
+                      <h5 class="mb-0">
+                          <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Status e Visibilidade
+                          </button>
+                      </h5>
+                  </div>
+                  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
+                      <div class="card-body">
+                          Conteúdo do Status e Visibilidade.
+                      </div>
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="card-header" id="headingTwo">
+                      <h5 class="mb-0">
+                          <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              Categorias
+                          </button>
+                      </h5>
+                  </div>
+                  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
+                      <div class="card-body">
+                          Conteúdo das Categorias.
+                      </div>
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="card-header" id="headingThree">
+                      <h5 class="mb-0">
+                          <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              Tags
+                          </button>
+                      </h5>
+                  </div>
+                  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
+                      <div class="card-body">
+                          Conteúdo das Tags.
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
+</div>
