--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -40,3 +40,11 @@ input, label, button {
     margin: 10px auto;
 }
 
+div.card-header {
+    padding: 0;
+}
+
+button.btn.btn-link {
+    padding: 2 auto;
+}
+
